modify full project for clean logic
decrease endpoint unnecessary and clean only needed endpoint normalize dto and service following business logic and decrease method from repository