@@ -1,12 +1,14 @@
 package fu.sep.apjf.mapper;
 
-import fu.sep.apjf.dto.ExamDto;
-import fu.sep.apjf.dto.QuestionDto;
+import fu.sep.apjf.dto.request.ExamRequestDto;
+import fu.sep.apjf.dto.response.ExamResponseDto;
+import fu.sep.apjf.dto.response.QuestionResponseDto;
 import fu.sep.apjf.entity.Exam;
 import fu.sep.apjf.entity.Question;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.UUID;
 import java.util.stream.Collectors;
 
 public final class ExamMapper {
@@ -15,7 +17,7 @@ public final class ExamMapper {
         // Private constructor to prevent instantiation
     }
 
-    public static ExamDto toDto(Exam exam) {
+    public static ExamResponseDto toResponseDto(Exam exam) {
         if (exam == null) {
             return null;
         }
@@ -35,25 +37,25 @@ public final class ExamMapper {
             unitId = exam.getUnit().getId();
         }
 
-        List<QuestionDto> questions = new ArrayList<>();
+        List<QuestionResponseDto> questions = new ArrayList<>();
         List<String> questionIds = new ArrayList<>();
         int questionCount = 0;
         int totalQuestions = 0;
 
         if (exam.getQuestions() != null && !exam.getQuestions().isEmpty()) {
             questions = exam.getQuestions().stream()
-                    .map(QuestionMapper::toDto)
+                    .map(QuestionMapper::toResponseDto)
                     .collect(Collectors.toList());
 
             questionIds = exam.getQuestions().stream()
                     .map(Question::getId)
-                    .toList();
+                    .collect(Collectors.toList());
 
             questionCount = exam.getQuestions().size();
             totalQuestions = questionCount;
         }
 
-        return new ExamDto(
+        return new ExamResponseDto(
                 exam.getId(),
                 exam.getTitle(),
                 exam.getDescription(),
@@ -70,28 +72,27 @@ public final class ExamMapper {
         );
     }
 
-    public static Exam toEntity(ExamDto examDto) {
+    public static Exam toEntity(ExamRequestDto examDto) {
         if (examDto == null) {
             return null;
         }
 
         Exam exam = new Exam();
-        exam.setId(examDto.id());
+        exam.setId(UUID.randomUUID().toString());
         exam.setTitle(examDto.title());
         exam.setDescription(examDto.description());
         exam.setDuration(examDto.duration());
         exam.setExamScopeType(examDto.examScopeType());
-        exam.setCreatedAt(examDto.createdAt());
 
         return exam;
     }
 
-    public static List<ExamDto> toDtoList(List<Exam> exams) {
+    public static List<ExamResponseDto> toResponseDtoList(List<Exam> exams) {
         if (exams == null) {
             return List.of();
         }
         return exams.stream()
-                .map(ExamMapper::toDto)
-                .toList();
+                .map(ExamMapper::toResponseDto)
+                .collect(Collectors.toList());
     }
 }
